--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,9 +6,12 @@ jobs:
       - image: debian:testing
     steps:
       - run:
-          name: Something
-          command:
-            true
+          name: Install dependencies
+          command: |
+            apt-get install -y git autoconf automake libtool make \
+                libreadline-dev texinfo libjson-c-dev pkg-config bison flex python-pip \
+                libc-ares-dev python3-dev python-pytest python3-sphinx build-essential \
+                libsystemd-dev
 
 workflows:
   version: 2
