--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
+            apt-get update
             apt-get install -y git autoconf automake libtool make \
                 libreadline-dev texinfo libjson-c-dev pkg-config bison flex python-pip \
                 libc-ares-dev python3-dev python-pytest python3-sphinx build-essential \
